# portfolio-NTvanOort

./: README.md  _config.yml  mlflow.db  pyproject.toml
1-hypertuning-gridsearch/: nn_reflection_report.md  notebook.ipynb  summary.md
2-hypertuning-mlflow/: cnn_reflection_report.md  mlflow.db  mlflow.ipynb
2-hypertuning-mlflow/models/: 20251027-1450model.pt  20251031-1620model.pt  20251107-1049model.pt  20251107-1101model.pt
2-hypertuning-mlflow/models/20251024-110553/: model.toml
2-hypertuning-mlflow/models/20251024-110611/: model.toml
2-hypertuning-mlflow/models/20251024-110627/: model.toml  settings.toml
2-hypertuning-mlflow/models/20251027-154016/: model.toml
2-hypertuning-mlflow/models/20251031-161247/: settings.toml
2-hypertuning-mlflow/models/20251107-104800/: model.toml  settings.toml
2-hypertuning-mlflow/models/20251107-105956/: settings.toml
2-hypertuning-mlflow/models/20251107-110139/: settings.toml
2-hypertuning-mlflow/models/20251107-110538/: model.toml
2-hypertuning-mlflow/models/20251107-111256/: model.toml  (+1 more)
3-hypertuning-rnn/: mlflow.db  notebook.ipynb  rnn_reflection_report.md  summary.md
4-hypertuning-ray/: main.py  pyproject.toml
4-hypertuning-ray/notebooks/: data.ipynb  model.ipynb  test_data.ipynb
4-hypertuning-ray/src/: __init__.py  data.py
5-deployment/: deployment_app_link.md
5-deployment/straattaal/: docker-compose.yml  slanggen.toml
6-hackathon/: hackathon.md
7-ethics/: DLDEPL NTvanOort - Discriminative Dating Algorithms.md  Ethical models.docx  discriminative_dating_algorithms.md  ethical_models.md
(+11 files in other folders)
