[project]
name = "portfolio-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "mads-datasets[torch]>=0.3.14",
    "mlflow>=3.3.2",
    "mltrainer>=0.2.5",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "tomlserializer>=0.2.0",
    "torch",
    "torchvision",
    "torchaudio",
    "torchinfo>=1.8.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[dependency-groups]
dev = [
    "notebooktester>=0.2.1",
    "ruff>=0.12.11",
]
